# bws-rs

./: .gitignore  Cargo.toml  go.mod  go.sum  readme.md
examples/: get_object.rs
src/: error.rs  lib.rs  utils.rs
src/authorization/: mod.rs  v2.rs  v4.rs
src/http/: axum.rs
src/service/: s3.rs
tests/: base_test.go  s3_sdk_test.go
