[package]
name = "bws-rs"
version = "0.1.0"
edition = "2021"
[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.27"
quick-xml = { version = "0.37.4", features = ["serde", "serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
